# docs/swagger.json
@@ -9,68 +9,6 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/auth/telegram": {
-            "post": {
-                "description": "Authenticates a user by verifying the Telegram Web App data and issues a JWT if successful.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "Authenticate user via Telegram",
-                "parameters": [
-                    {
-                        "description": "User data required for authentication.",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/user.BaseRequest"
-                        }
-                    },
-                    {
-                        "type": "string",
-                        "description": "User data in encoded format containing user ID and other necessary information",
-                        "name": "X-User-Data",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "JWT token issued successfully.",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request - invalid request body.",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized - invalid data signature.",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error - failed to create or update user, or token generation failed.",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/gunfight/find": {
             "get": {
                 "description": "Opens a websocket connection and waits to match with an opponent for a gunfight.",
@@ -269,7 +207,7 @@
                 }
             }
         },
-        "/money/": {
+        "/money": {
             "get": {
                 "description": "Fetches the money details associated with the provided user ID.",
                 "consumes": [
@@ -306,6 +244,50 @@
                     },
                     "404": {
                         "description": "Not found - no money record found for the user ID.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user": {
+            "get": {
+                "description": "check user and his actual data.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Check user and his actual data",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User data in encoded format containing user ID and other necessary information",
+                        "name": "X-User-Data",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Returns the user details.",
+                        "schema": {
+                            "$ref": "#/definitions/user.BaseResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request - invalid request body.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error - failed to create or update user.",
                         "schema": {
                             "type": "string"
                         }
@@ -366,11 +348,6 @@
             "description": "This is a money model",
             "type": "object",
             "properties": {
-                "user_id": {
-                    "type": "integer",
-                    "x-order": "1",
-                    "example": 1
-                },
                 "gold": {
                     "type": "integer",
                     "x-order": "2",
@@ -383,7 +360,8 @@
                 }
             }
         },
-        "user.BaseRequest": {
+        "user.BaseResponse": {
+            "description": "This is a user model",
             "type": "object",
             "properties": {
                 "id": {
@@ -399,9 +377,13 @@
                     "type": "string",
                     "x-order": "3"
                 },
-                "hash": {
+                "username": {
                     "type": "string",
                     "x-order": "4"
+                },
+                "link": {
+                    "type": "string",
+                    "x-order": "5"
                 }
             }
         }
