# internal/model/user/http.go
@@ -4,7 +4,7 @@ type BaseRequest struct {
 	ID        int    `json:"id" example:"1" extensions:"x-order=1"`
 	FirstName string `json:"first_name" extensions:"x-order=2"`
 	LastName  string `json:"last_name" extensions:"x-order=3"`
-	Hash      string `json:"hash" extensions:"x-order=4"`
+	Username  string `json:"username" extensions:"x-order=4"`
 }
 
 // BaseResponse represents the user model
@@ -13,5 +13,6 @@ type BaseResponse struct {
 	ID        int    `json:"id" example:"1" extensions:"x-order=1"`
 	FirstName string `json:"first_name" extensions:"x-order=2"`
 	LastName  string `json:"last_name" extensions:"x-order=3"`
-	Link      string `json:"link" example:"dsfb434kdfp" extensions:"x-order=5"`
+	Username  string `json:"username" extensions:"x-order=4"`
+	Link      string `json:"link" extensions:"x-order=5"`
 }
